[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interface/resources/blue.png" type="Texture" id=1]
[ext_resource path="res://Interface/Consumer/Menu.gd" type="Script" id=2]
[ext_resource path="res://Interface/resources/blue50.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 450.356, 58.9244 )
scale = Vector2( 10.14, 6.1 )
frames = SubResource( 1 )
animation = "New Anim"
offset = Vector2( 6.76959, 40.1763 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
modulate = Color( 0.470588, 0.470588, 0.470588, 1 )
position = Vector2( 513.5, 282 )
scale = Vector2( 4.91, 3.74 )
frames = SubResource( 2 )

[node name="StartButton" type="Button" parent="."]
visible = false
margin_left = 309.0
margin_top = 158.0
margin_right = 725.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
visible = false
margin_left = 309.0
margin_top = 158.0
margin_right = 725.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
visible = false
margin_left = 311.0
margin_top = 377.0
margin_right = 724.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="."]
visible = false
margin_left = 311.0
margin_top = 377.0
margin_right = 724.0
margin_bottom = 409.0
rect_pivot_offset = Vector2( 62, 20 )
text = "Return to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 482.0
margin_top = 130.0
margin_right = 555.0
margin_bottom = 144.0
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 444.0
margin_top = 237.0
margin_right = 484.0
margin_bottom = 251.0
text = "Total Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumberLabel" type="Label" parent="."]
visible = false
margin_left = 531.0
margin_top = 237.0
margin_right = 571.0
margin_bottom = 251.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
